--- a/Microservicio-Autentication/appsettings.json
+++ b/Microservicio-Autentication/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database= MicroAutenticacion;Trusted_Connection=True;"
+  },
+  "AllowedHosts": "*",
+  "Authentication": {
+    "SecretKey": "WDFBgbfndRTHD65ujyjnewg34t"
+  }
 }
